// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-open-with/OpenWithButton should force the tooltip open with a close button if Box Tools is not installed 1`] = `
<Tooltip
  className="bcow-tooltip"
  isShown={true}
  position="bottom-center"
  showCloseButton={true}
  text="Box Tools is not installed"
>
  <Button
    className=""
    data-testid="singleintegrationbutton"
    isDisabled={true}
    isLoading={false}
    onClick={[Function]}
    showRadar={false}
    type="submit"
  >
    <OpenWithButtonContents>
      <FileIcon
        className="bcow-integration-icon"
        dimension={26}
        height={26}
        width={26}
      />
    </OpenWithButtonContents>
  </Button>
</Tooltip>
`;

exports[`elements/content-open-with/OpenWithButton should render as disabled if the integration is disabled 1`] = `
<Tooltip
  className="bcow-tooltip"
  position="bottom-center"
  text={
    <FormattedMessage
      defaultMessage="No integrations are available for this file"
      id="be.emptyOpenWithDescription"
    />
  }
>
  <Button
    className=""
    data-testid="singleintegrationbutton"
    isDisabled={true}
    isLoading={false}
    onClick={[Function]}
    showRadar={false}
    type="submit"
  >
    <OpenWithButtonContents>
      <IconAdobeSign
        className="bcow-integration-icon"
        dimension={26}
        height={26}
        width={26}
      />
    </OpenWithButtonContents>
  </Button>
</Tooltip>
`;

exports[`elements/content-open-with/OpenWithButton should render as disabled if there is no display integration 1`] = `
<Tooltip
  className="bcow-tooltip"
  position="bottom-center"
  text={
    <FormattedMessage
      defaultMessage="No integrations are available for this file"
      id="be.emptyOpenWithDescription"
    />
  }
>
  <Button
    className=""
    data-testid="singleintegrationbutton"
    isDisabled={true}
    isLoading={false}
    onClick={[Function]}
    showRadar={false}
    type="submit"
  >
    <OpenWithButtonContents>
      <IconOpenWith
        className="bcow-integration-icon"
        dimension={26}
        height={26}
        width={26}
      />
    </OpenWithButtonContents>
  </Button>
</Tooltip>
`;

exports[`elements/content-open-with/OpenWithButton should render with the correct icon 1`] = `
<Tooltip
  className="bcow-tooltip"
  position="bottom-center"
  text={
    <FormattedMessage
      defaultMessage="No integrations are available for this file"
      id="be.emptyOpenWithDescription"
    />
  }
>
  <Button
    className=""
    data-testid="singleintegrationbutton"
    isDisabled={false}
    isLoading={false}
    onClick={[Function]}
    showRadar={false}
    type="submit"
  >
    <OpenWithButtonContents>
      <IconGoogleDocs
        className="bcow-integration-icon"
        dimension={26}
        height={26}
        width={26}
      />
    </OpenWithButtonContents>
  </Button>
</Tooltip>
`;
